Basic App working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.citasjosema">
 
     <application
+        android:name="com.example.citasjosema.QuoteApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,5 +21,4 @@
     </application>
 
 </manifest>
-
 <!--Created by Josema-->
